fixed overflow of long messages in firefox

--- a/scss/wwu2019/messages.scss
+++ b/scss/wwu2019/messages.scss
@@ -74,6 +74,10 @@ $wwu-messages-width: 560px;
     }
 }
 
+.w50rem {
+    width: 50rem;
+}
+
 .modal-backdrop {
     position: fixed;
     top: 0;
